# rust

./: README.md
Projects/Speech2Text/: .gitignore  Cargo.toml  README.md
Projects/Speech2Text/src/: audio.rs  config.rs  errors.rs  lib.rs  main.rs  speech2text.rs  whisper.rs
Projects/WatchexecWatcher/: Cargo.toml
Projects/WatchexecWatcher/src/: errors.rs  lib.rs  main.rs
Projects/WatchexecWatcher/src/include/: errors.rs  include_sender.rs  include_updater.rs  mod.rs
Projects/WatchexecWatcher/src/include/tests/: mod.rs  process_include.rs
Projects/WatchexecWatcher/src/watcher/: core.rs  event.rs  include_updater.rs  mod.rs  watcher_core.rs
Projects/WatchexecWatcher/src/watcher/tests/: build.rs  handle_event.rs  merge_events.rs  mod.rs
Projects/WatchexecWatcher/tests/: watcher_events.rs
Projects/WatchexecWatcher/tests/integrations/: main.rs  workflow.rs
Projects/WatchexecWatcher/tests/integrations/errors/: mod.rs
Projects/markdown_to_leptos/: Cargo.toml  README.md
Projects/markdown_to_leptos/Docs/: i_love_dota2.md  my_first_blog.md  nothing.md
Projects/markdown_to_leptos/app/: Cargo.toml
Projects/markdown_to_leptos/app/src/: lib.rs  pages.rs
Projects/markdown_to_leptos/app/src/pages/: blog.rs  home.rs
Projects/markdown_to_leptos/frontend/src/: lib.rs
Projects/markdown_to_leptos/markdown/: Cargo.toml  build.rs
Projects/markdown_to_leptos/markdown/src/: description.rs  lib.rs  markdown_parser.rs
Projects/markdown_to_leptos/style/: main.scss
Projects/simple-reqwest-tui/: Cargo.toml
Projects/simple-reqwest-tui/src/: app.rs  main.rs
Projects/simple-reqwest-tui/src/app/: handle_key.rs  ui.rs
Projects/simple-reqwest-tui/src/app/ui/: content.rs
docs/: how_rust_compiler_work.md  http_method.md  macro.md  node_value_markdown_html.md  (+1 more)
examples/use_axum/examples/compression/: Cargo.toml
examples/use_axum/examples/compression/src/: main.rs  tests.rs
examples/use_axum/examples/diesel-async-postgres/: Cargo.toml
examples/use_axum/examples/diesel-async-postgres/migrations/2024-11-21-135311_add_users/: up.sql
examples/use_axum/examples/diesel-async-postgres/src/: main.rs
examples/use_axum/examples/diesel-postgres/: Cargo.toml  diesel.toml
examples/use_axum/examples/diesel-postgres/migrations/2024-11-21-121539_add_users/: up.sql
examples/use_axum/examples/diesel-postgres/src/: main.rs
examples/use_axum/examples/error-handling/: Cargo.toml
examples/use_axum/examples/error-handling/src/: main.rs
examples/use_axum/examples/graceful-shutdown/: Cargo.toml
examples/use_axum/examples/graceful-shutdown/src/: main.rs
examples/use_axum/examples/jwt/: Cargo.toml
examples/use_axum/examples/jwt/src/: main.rs
examples/use_axum/examples/sse/: Cargo.toml  README.md
examples/use_axum/examples/sse/assets/: script.js
examples/use_axum/examples/sse/src/: main.rs  test.rs
examples/use_axum/examples/static-file-server/: Cargo.toml
examples/use_axum/examples/static-file-server/src/: main.rs
examples/use_axum/examples/testing/: Cargo.toml
examples/use_axum/examples/testing/src/: main.rs
examples/use_axum/examples/todos/: Cargo.toml  README.md
examples/use_axum/examples/todos/src/: main.rs
examples/use_axum/examples/tokio-redis/: Cargo.toml
examples/use_axum/examples/tokio-redis/src/: main.rs
examples/use_axum/examples/tracing-aka-logging/: Cargo.toml
examples/use_axum/examples/tracing-aka-logging/src/: main.rs
examples/use_axum/examples/websocket/: Cargo.toml
examples/use_axum/examples/websocket/assets/: index.html  script.js
examples/use_axum/examples/websocket/src/: client.rs  main.rs
examples/use_axum/examples/with_mongodb/: Cargo.toml
examples/use_axum/examples/with_mongodb/src/: main.rs
examples/use_diesel/: .env  .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml
examples/use_diesel/migrations/2024-11-21-101112_create_posts/: up.sql
examples/use_diesel/src/: lib.rs  main.rs  models.rs
examples/use_iceoryx2/examples/request-response/: Cargo.toml
examples/use_iceoryx2/examples/request-response/src/: lib.rs
examples/use_ipc_channel/examples/request-response-one-shot/: Cargo.toml
examples/use_ipc_channel/examples/request-response-one-shot/src/: lib.rs
examples/use_leptos/examples/directives/: Cargo.toml
examples/use_leptos/examples/directives/src/: lib.rs  main.rs
examples/use_leptos/examples/hackernews_island/: Cargo.toml
examples/use_leptos/examples/hackernews_island/src/: app.rs  fallback.rs  lib.rs  main.rs
examples/use_leptos/examples/hackernews_island/src/routes/: story.rs  users.rs
examples/use_leptos/examples/highlightjs/: Cargo.toml  package.json  size.md
examples/use_leptos/examples/highlightjs/src/: app.rs  hljs.rs  lib.rs  main.rs
examples/use_leptos/examples/highlightjs/src/app/: language.rs
examples/use_leptos/examples/highlightjs/src/pages/demo/: mod.rs
examples/use_leptos/examples/highlightjs/style/: _highlight.scss  main.scss
examples/use_leptos/examples/highlightjs/style/demo/: _index.scss
examples/use_leptos/examples/highlightjs/style/theme/: _index.scss  _mocha.scss
examples/use_leptos/examples/island_router/: Cargo.toml  mock_data.json
examples/use_leptos/examples/island_router/public/: routing.js
examples/use_leptos/examples/island_router/src/: app.rs  lib.rs  main.rs
examples/use_leptos/examples/router/: Cargo.toml  index.html  style.css
examples/use_leptos/examples/router/src/: api.rs  lib.rs  main.rs
examples/use_leptos/examples/server_fns_axum/: Cargo.toml
examples/use_leptos/examples/server_fns_axum/src/: app.rs  lib.rs  main.rs  middleware.rs
examples/use_leptos/examples/server_fns_axum/src/app/: home.rs
examples/use_leptos/examples/server_fns_axum/style/: main.scss
examples/use_leptos/examples/todomvc/: Cargo.toml  index.html  package-lock.json  package.json
examples/use_leptos/examples/todomvc/src/: lib.rs  main.rs
todo-tui-async/: Cargo.toml
todo-tui-async/src/: app.rs  main.rs
todo-tui-async/src/app/handle_key/: main_key.rs
todo-tui-async/src/app/ui/: content.rs  popup_adding.rs  popup_deleting.rs
(+204 files in other folders)
