[workspace]
resolver = "2"
members = ["app", "frontend", "markdown", "server"]

[profile.wasm-release]
inherits = "release"
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"

[workspace.dependencies]
leptos = { version = "0.8.2" }
leptos_meta = { version = "0.8.2" }
leptos_router = { version = "0.8.2" }
leptos_axum = { version = "0.8.2" }

axum = "0.8.4"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
wasm-bindgen = "0.2.100"

# Markdown
chrono = "0.4.41"
comrak = "0.39.0"
convert_case = "0.8.0"
glob = "0.3.2"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.101"
syntect = "5.2.0"


[[workspace.metadata.leptos]]
name = "markdown_to_leptos"

bin-package = "server"
lib-package = "frontend"

style-file = "style/main.scss"
# tailwind-input-file = "style/tailwind.css"

site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"

site-addr = "127.0.0.1:3000"
reload-port = 3001

end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

browserquery = "defaults"
env = "DEV"
watch = false

bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
