[package]
name = "use_diesel"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2", features = ["postgres"] }
dotenvy = "0.15"

[[bin]]
name = "show_posts"
path = "src/bin/show_posts.rs"

[[bin]]
name = "write_post"
path = "src/bin/write_post.rs"

[[bin]]
name = "publish_post"
path = "src/bin/publish_post.rs"

[lib]
name = "use_diesel"
path = "src/lib.rs"
