[package]
name = "diesel-async-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
bb8 = "0.8"
diesel = "2.2.5"
diesel-async = { version = "0.5.1", features = ["postgres", "bb8"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
