[package]
name = "graceful-shutdown"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["tracing"] }
tokio = { version = "1.41.1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
tower-http = { version = "0.6.1", features = ["timeout", "trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
