[package]
name = "testing"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
http-body-util = "0.1.2"
hyper-util = { version = "0.1.10", features = [
  "client",
  "http1",
  "client-legacy",
] }
mime = "0.3.17"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5.1", features = ["util"] }
