[package]
name = "tokio-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
bb8 = "0.8.6"
bb8-redis = "0.17.0"
redis = "0.27.5"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
