[package]
name = "with_mongodb"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
mongodb = "3.1.0"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["add-extension", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
