[package]
name = "request-response"
version = "0.1.0"
edition = "2024"

[dependencies]
iceoryx2 = "0.7.0"
tokio = { version = "1.48.0" }

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "client_multiple"
path = "src/bin/client_multiple.rs"
