[package]
name = "request-response"
version = "0.1.0"
edition = "2024"

[dependencies]
ipc-channel = "0.20.2"
serde = { version = "1.0.228", features = ["derive"] }
dotenvy = { version = "0.15.7" }

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
