[package]
name = "directives"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
console_log = "1"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Clipboard", "Navigator"] }
log = "0.4"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["NodeList"] }
