[package]
name = "hackernews"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["nightly", "islands"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7", features = ["nightly"] }
leptos_axum = { version = "0.7", optional = true }

axum = { version = "0.7", features = ["http2"], optional = true }
console_error_panic_hook = "0.1"
console_log = "1"
http = { version = "1", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", features = ["full"], optional = true }
tower-http = { version = "0.6", features = [
  "fs",
  "compression-br",
  "compression-gzip",
], optional = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["AbortController", "AbortSignal"] }
rust-embed = { version = "8", features = [
  "axum",
  "mime-guess",
  "tokio",
], optional = true }
mime_guess = { version = "2", optional = true }

serde = { version = "1", features = ["derive"] }
gloo-net = { version = "0.6", features = ["http"] }
reqwest = { version = "0.12", features = ["json"] }

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:axum",
  "dep:http",
  "dep:leptos_axum",
  "dep:mime_guess",
  "dep:rust-embed",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "leptos/ssr",
  "dep:leptos_axum",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "hackernews"

site-addr = "127.0.0.1:3000"
reload-port = 3001

site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"

end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

browserquery = "defaults"
env = "DEV"

bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
