[package]
name = "highlightjs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }

axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
wasm-bindgen = "0.2"

# Logging
console_error_panic_hook = "0.1"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-subscriber-wasm = { version = "0.1.0", optional = true }

# HighlightJS (csr)
js-sys = { version = "0.3.77", optional = true }
gloo-utils = { version = "0.2.0", features = ["serde"], optional = true }
gloo-net = { version = "0.6.0", features = ["http"], optional = true }

strum = { version = "0.27.1", features = ["derive"] }

# Deserialize
serde = { version = "1.0.228", features = ["derive"] }

[features]
hydrate = [
  "leptos/hydrate",
  "dep:tracing-subscriber-wasm",
  "dep:js-sys",
  "dep:gloo-utils",
  "dep:gloo-net",
]
ssr = [
  "dep:axum",
  "dep:leptos_axum",
  "dep:tokio",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "highlightjs"

style-file = "style/main.scss"
# tailwind-input-file = "style/tailwind.css"

site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"

site-addr = "127.0.0.1:3002"
reload-port = 3001

end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

browserquery = "defaults"
env = "DEV"
watch = false

bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
