[package]
name = "server_fns_axum"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["nightly"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7", features = ["nightly"] }
leptos_axum = { version = "0.7", optional = true }

axum = { version = "0.7", optional = true }
console_error_panic_hook = "0.1"
console_log = "1"
http = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", features = ["full"], optional = true }
tower-http = { version = "0.6", features = ["fs", "trace"], optional = true }
wasm-bindgen = "0.2"

async-broadcast = { version = "0.7", optional = true }
bytecheck = "0.8"
dashmap = { version = "6", optional = true }
futures = "0.3"
notify = { version = "7", optional = true }
once_cell = { version = "1", optional = true }
pin-project-lite = "0.2"
rkyv = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
server_fn = { version = "0.7", features = [
  "serde-lite",
  "rkyv",
  "multipart",
  "postcard",
] }
simple_logger = "5.0"
strum = { version = "0.26", features = ["derive", "strum_macros"] }
toml = "0.8"
web-sys = { version = "0.3", features = ["File", "FileList"] }

[features]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:axum",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:leptos_axum",
  "leptos/ssr",

  "dep:notify",
  "dep:dashmap",
  "dep:once_cell",
  "dep:async-broadcast",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "server_fns_axum"

site-addr = "127.0.0.1:3000"
reload-port = 3001

site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"

end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

browserquery = "defaults"
env = "DEV"

bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
