[package]
name = "todomvc"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
console_log = "1"
console_error_panic_hook = "0.1"
uuid = { version = "1", features = ["v4", "js", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = ["Storage"] }
log = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
